--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,10 @@ java {
 
 repositories {
     mavenCentral()
+    maven {
+		url 'https://repo.clojars.org'
+		name 'Clojars'
+	}
 }
 
 dependencies {
@@ -24,8 +28,13 @@ dependencies {
     // }
     implementation 'org.springframework.boot:spring-boot-starter-web'
     // implementation 'org.springframework.boot:spring-boot-starter-jetty'
+    implementation('org.springframework:spring-jdbc')
+    implementation 'hikari-cp:hikari-cp:3.0.1'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    runtimeOnly('com.h2database:h2:2.1.214')
+
 }
 
 tasks.named('test') {
